# fft-benchmark

./: .gitignore  CMakeLists.txt  DFT.i  benchmarks.md  benchmarks.sh  main.cpp  tests.cpp  threads-monitor.sh
benchmarks/: benchmark_radix2.cpp
notebooks/: experiments.ipynb
presentation/: presentation.md
src/: algorithm.h  benchmark.h  generation.h  measurement.h  multiprocessing.h  output.h  types.h
src/algorithm/: IFourierTransformAlgorithm.cpp  IFourierTransformAlgorithm.h  SupportedSequences.h
src/algorithm/impl/: utils.cpp  utils.h
src/algorithm/impl/dft/: DFT.cpp  DFT.h
src/algorithm/impl/fft/any/: Bluestein_I_Stockham_R2.cpp  (+3 more)
src/algorithm/impl/fftw/: FFTWEstimate.cpp  FFTWEstimate.h
src/algorithm/utils/: brp.cpp  brp.h  drp.cpp  drp.h  minimized.cpp  minimized.h  operation.cpp  operation.h
src/benchmark/: Benchmark.cpp  Benchmark.h  Experiment.cpp  Experiment.h  experiment.cpp  experiment.h
src/generation/: ConstantInputGenerator.cpp  ConstantInputGenerator.h  IInputGenerator.h  ImpulseInputGenerator.cpp  ImpulseInputGenerator.h  RandomInputGenerator.cpp  RandomInputGenerator.h  SinusoidalInputGenerator.cpp  SinusoidalInputGenerator.h
src/measurement/: IMeasurer.h  IntelCPUPowerMeter.cpp  IntelCPUPowerMeter.h  Timer.cpp  Timer.h
src/multiprocessing/: ThreadPool.cpp  ThreadPool.h  threads.cpp  threads.h  utils.cpp  utils.h
src/output/: CompositeOutputCollector.cpp  CompositeOutputCollector.h  CsvOutputCollector.cpp  CsvOutputCollector.h  IOutputCollector.h  StdOutputCollector.cpp  StdOutputCollector.h
tests/: tests.cpp
(+76 files in other folders)
